--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,77 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <% if flash[:notice] %>
+      <div class="notification is-primary global-notification">
+        <p class="notice"><%= notice %></p>
+      </div>
+    <% end %>
+    <% if flash[:notice] %>
+      <div class="notification is-danger global-notification">
+        <p class="alert"><%= notice %></p>
+      </div>
+    <% end %>
+
+     <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <%= link_to root_path, class:"navbar-item" do %>
+          <h1 class="title is-5 has-text-white">Dribbble Clone</h1>
+        <% end  %>
+      <div class="navbar-burger burger" data-target="navbar">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+
+      <div id="navbar" class="navbar-menu">
+
+        <div class="navbar-start">
+          <div class="navbar-item">
+            <div class="field is-grouped">
+              <p class="control">
+                <%= link_to 'Shots', root_path , class:"button is-dark" %>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="navbar-end">
+          <div class="navbar-item">
+            <div class="field is-grouped">
+              <% if user_signed_in? %>
+              <p class="control">
+                <%= link_to new_shot_path, class:"button is-primary"  do %>
+                  <span class="icon is-small"><i class="fa fa-upload"></i></span>
+                  <span>New Shot</span>
+                <% end %>
+              </p>
+              <p class="control">
+                <%= link_to current_user.name, edit_user_registration_path, class:"button is-dark" %>
+              </p>
+              <p class="control">
+                <%= link_to "Log Out", destroy_user_session_path, method: :delete, class:"button is-dark" %>
+              </p>
+              <% else %>
+              <p class="control">
+                 <%= link_to "Sign In", new_user_session_path, class:"button is-dark" %>
+              </p>
+              <p class="control">
+                <%= link_to "Sign up", new_user_registration_path, class:"button is-dark"%>
+              </p>
+              <% end %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav> 
+
     <%= yield %>
   </body>
 </html>
